<resources>
    <string name="app_name">UnitTestMVP</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="error">Mínimo 6 caracteres</string>
    <string name="error_email">Ingrese un correo válido</string>
    <string name="message_login">Usuario y/o contraseña incorrectos</string>
</resources>
